# Halftone-QRcode

./: .gitignore  CMakeLists.txt  ImageReaderSource.cpp  ImageReaderSource.h  README.md  halftone.cpp  halftone.h  halftoneQR.cpp  halftoneQR.h  jpgd.cpp  project.cpp  project.h  qrenc.cpp  readQR.cpp  readQR.h
html/: halftoneQR.html
lib/qrenc/: qrenc.h
lib/zxing/: lodepng.cpp  lodepng.h  readQR.cpp
